minor layout changes

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -35,7 +35,7 @@
             <div>Joe Rogan</div>
             <div class="suggested-post-stat">5,218 Tweets</div>
         </div>
-        <div class = "suggested-post">
+        <div class = "suggested-post-with-image">
             <div class="suggested-post-text-content">
                 <div class = "suggested-post-author">The New York Times</div>
                 <div>  CNN's Cuomo conundrum: A star anchor with a brother in trouble CNN's Cuomo conundrum: A star anchor with a brother in troubleCNN's Cuomo conundrum: A star anchor with a brother in troubleCNN's Cuomo conundrum: A star anchor with a brother in troubleCNN's Cuomo conundrum: A star anchor with a brother in trouble</div>
@@ -43,7 +43,7 @@
 
             <img class="suggested-post-image" src="img3.jpg"/>
         </div>
-        <div class = "suggested-post">
+        <div class = "suggested-post-with-image">
             <div class="suggested-post-text-content">
                 <div class="suggested-post-topic-style-b">COVID-19 LIVE</div>
                 <div> COVID-19 : News and update for massachusetts</div>
@@ -51,7 +51,7 @@
 
             <img class="suggested-post-image" src="img1.jpg"/>
         </div>
-        <div class = "suggested-post">
+        <div class = "suggested-post-with-image">
             <div class="suggested-post-text-content">
                 <div class = "suggested-post-author"> Bloomberg Opinion </div>
                 <div> Thinking about getting a covid shot ? </div>
