--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Bookmarks</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../../font-awesome/css/font-awesome.min.css">
 </head>
-<body class="bookmarks-window">
+<body class="window">
     <div class="bookmarks-section">
         <div class="page-title">Bookmarks</div>
         <div class="user-handle">@WebDev</div>
