--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Explore</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../../font-awesome/css/font-awesome.min.css">
 </head>
-<body class = "explore-window">
+<body class = "window">
 <div>
     <div class="explore-section">
         <span class="search-bar" >
@@ -24,7 +25,7 @@
         <a href="#" class="link-header"> Sports </a>
         <a href="#" class="link-header"> Entertainment </a>
     </div>
-    <div class = "explore-section">
+    <div class = "explore-suggested-post-section">
         <div class = "suggested-post">
             <div class="suggested-post-topic-style-a">Trending in science</div>
             <div>Starship</div>
