--- a/public/challenges/a4/index.html
+++ b/public/challenges/a4/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../../vendors/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../vendors/fontawesome/css/all.css"/>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 
 </head>
 <body>
@@ -19,7 +21,7 @@
                     <span class="d-none d-xl-inline d-xxl-inline"> </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-home"></i>
+                    <i class="bi bi-house-door"></i>
                     <span class="d-none d-xl-inline d-xxl-inline "> Home </span>
                 </a>
                 <a href="#" class="list-group-item fw-bold border-0 ">
@@ -27,27 +29,27 @@
                     <span class="d-none d-xl-inline d-xxl-inline"> Explore </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-bell"></i>
+                    <i class="bi bi-bell"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> Notifications </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-envelope"></i>
+                    <i class="bi bi-envelope"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> Messages </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-bookmark"></i>
+                    <i class="bi bi-bookmark"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> Bookmarks </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-fire"></i>
+                    <i class="bi bi-fire"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> Top Articles </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-user"></i>
+                    <i class="bi bi-person"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> Profile </span>
                 </a>
                 <a href="#" class="list-group-item border-0">
-                    <i class="fas fa-ellipsis-h"></i>
+                    <i class="bi bi-three-dots"></i>
                     <span class="d-none d-xl-inline d-xxl-inline"> More </span>
                 </a>
             </div>
