--- a/public/tuiter/HomeScreen/index.html
+++ b/public/tuiter/HomeScreen/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Explore</title>
+    <title>Home Screen</title>
     <link rel="stylesheet" href="../../vendors/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../vendors/bootswatch/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../vendors/fontawesome/css/all.css"/>
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 </head>
 <body>
-
-    <div class="container" id="wd-explore"></div>
+    <div class="container" id="wd-home"></div>
     <script src="index.js" type="module"></script>
-
-
 </body>
 </html>
